# adagio-cli

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASING.md  pyproject.toml  simple-test.ipynb
.github/: release.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
examples/: Dada2-arguments.json  Dada2.adg  arguments.json  rpc_agent.py  simple.json
src/adagio/: __init__.py  check.py  cli.py  describe.py  dummy_execute.py  execute.py  hello.py  io.py  serial_execute.py  type_format.py
src/adagio/app/parsers/: pipeline.py
src/adagio/backend/: __init__.py  base.py  bridge.py  dispatch.py  environment_setup.py  setup.py  test_dispatch.py  test_environment_setup.py  test_miniforge.py  test_setup.py  util.py
src/adagio/backend/agent/: __init__.py  __main__.py  handlers.py  protocol.py
src/adagio/cli/: args.py  cache.py  config.py  dynamic.py  main.py  pipeline.py  pipeline_sources.py  qapi.py  runner.py  runtime.py  task_exec.py
src/adagio/embedded_agent/: __main__.py  main.py
src/adagio/execution/: context.py  proxy.py
src/adagio/executors/: __init__.py  apptainer.py  base.py  cache_support.py  common.py  container_support.py  defaults.py  docker.py  path_utils.py  serial_runner.py  task_contract.py  task_environments.py
src/adagio/model/: arguments.py  ast.py  pipeline.py  task.py
src/adagio/monitor/: api.py  composite.py  connected.py  log.py  tty.py
src/adagio/qapi/: __init__.py  build.py  client.py
tests/: test_apptainer_launcher.py  test_container_support.py  test_docker_launcher.py  test_output_options.py  test_pipeline_descriptions.py  test_pipeline_show.py  test_pipeline_sources.py  test_qapi_build.py  test_qapi_submit.py  test_serial_runner.py  test_task_environment_config.py  test_tty_monitor.py
