[project]
name = "adagio"
version = "0.0.0"
description = "Adagio command line tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cyclopts>=4.5.3", "pydantic>=2.12.5", "rich>=14.1.0"]


[dependency-groups]
dev = ["ruff>=0.13.0"]

[project.scripts]
adagio = "adagio.cli.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]


known-first-party = ["adagio"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]

module = ["qiime2.*"]
ignore_missing_imports = true
